5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3994/executions/1756_1577.log
== TEST (2019-05-22 19:35:38) 
-- CODE:
from numpy import*
a = float(input(("Digite a acelaracao: "))
v = float(input("Digite a velocidade: ")))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- ERROR:
File "XXXX", line 3
    v = float(input()))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:35:50) 
-- CODE:
from numpy import*
a = float(input(("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- ERROR:
File "XXXX", line 3
    v = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:36:00) 
-- CODE:
from numpy import*
a = float(input(("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- ERROR:
File "XXXX", line 3
    v = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:36:37) 
-- CODE:
from numpy import*
a = float(input(("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- ERROR:
File "XXXX", line 3
    v = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:36:54) 
-- CODE:
from numpy import*
a = float(input(("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- EXECUTION TIME:
0.122578
-- ERROR:
  File "/home/codebench/codes/1756/1577/main.py", line 3
    v = float(input())
    ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:37:07) 
-- CODE:
from numpy import*
a = float(input(("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- ERROR:
File "XXXX", line 3
    v = float(input())
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:37:30) 
-- CODE:
from numpy import*
a = float(input(("Digite a acelaracao: "))
v = float(input(("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- ERROR:
File "XXXX", line 3
    v = float(input(("Digite a velocidade: "))
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:37:58) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:38:13) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- EXECUTION TIME:
0.521436
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:38:20) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:38:33) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*t**2/2+v*t
print(D)
-- EXECUTION TIME:
0.376937
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:38:52) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*(t)**2/2+v*t
print(D)
-- EXECUTION TIME:
0.556102
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:38:55) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = a*(t)**2/2+v*t
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:39:17) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = (a*(t)**2)/2+v*t
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:39:23) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = (a*(t)**2)/2+v*t
print(D)
-- EXECUTION TIME:
0.367731
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:39:36) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = (a*(t)**2)/2+(v*t)
print(D)
-- EXECUTION TIME:
0.560293
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:39:55) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a)*(t)**2)/2+(v*t)
print(D)
-- EXECUTION TIME:
0.583686
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:40:44) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a)*(t)**2)/2+(v*t)
print(D)
-- EXECUTION TIME:
0.543139
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:41:19) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = (((a)*(t)**2)/2)+(v*t)
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:41:31) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = (((a)*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
0.613253
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:41:48) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
0.360837
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:41:53) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
0.528481
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:41:54) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
1.54383
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:41:54) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
3.28844
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:41:54) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
2.08818
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:41:55) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
2.1279
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:41:55) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
2.71659
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:41:55) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
1.73227
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:42:01) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

D = ((a*(t)**2)/2)+(v*t)
print(D)
-- EXECUTION TIME:
0.394223
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:42:29) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:42:38) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.470025
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:42:42) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.325767
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:43:26) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:43:44) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print( d )
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:43:53) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print( d )
-- EXECUTION TIME:
0.538731
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:48:12) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.434459
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:48:17) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.50566
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:48:21) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:51:37) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:51:46) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.537968
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:52:17) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.520376
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:52:21) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.88436
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:52:21) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
2.67875
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:52:21) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
1.77775
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
Digite a acelaracao: Digite a velocidade: Digite n: [  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:52:21) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
1.98103
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
Digite a acelaracao: Digite a velocidade: Digite n: [  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:52:22) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = ((a*(t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
2.51909
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
Digite a acelaracao: Digite a velocidade: Digite n: [  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:52:56) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = (a*(t)**2/2)+(v*t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:53:05) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = (a*(t)**2/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.335581
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:55:14) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = (a*(t)**2/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.426813
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 19:55:37) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = (a*(t)**2/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.611111
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 20:01:18) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = (a*(t)**2/2)+(v*t)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 20:01:30) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = (a*(t)**2/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.418661
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 20:01:46) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = (a*((t)**2)/2)+(v*t)
print(d)
-- EXECUTION TIME:
0.460023
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-22 20:02:00) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(5)
d = zeros(N)

d = (a*(t)**2/2)+v*t
print(d)
-- EXECUTION TIME:
0.456555
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 0.   4.   9.2 15.6 23.2]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[  0.   81.4 172.6 273.6 384.4]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-23 20:52:49) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(N)
d = zeros(N)

d = (a*(t)**2/2)+v*t
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-23 20:53:04) 
-- CODE:
from numpy import*
a = float(input("Digite a acelaracao: "))
v = float(input("Digite a velocidade: "))
N = int(input("Digite n: "))
t = arange(N)
d = zeros(N)

d = (a*(t)**2/2)+v*t
print(d)
-- EXECUTION TIME:
0.510356
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
